--- a/WebApplication1/Views/Home/Masculino.cshtml
+++ b/WebApplication1/Views/Home/Masculino.cshtml
@@ -11,6 +11,12 @@
     <p style="text-align: center; padding-bottom: 10px;">
         Não se precoupe, existe uma pausa entre os passos, assim você ira conseguir fazer sem pressa.
     </p>
+    <div class="attention-message">
+        <p style="text-align: center;"><strong>Atenção!</strong></p>
+        <p> Se você for passar o cateter não irá precisar de usar luvas.</p>
+        <p> Se outra pessoa for passar o cateter para você: </p>
+        <p> Essa pessoa deve colocar as luvas após a lavagem das mãos, especificado no passo a seguir..<p>
+    </div>
     <div id="mediaPlayer">
         <div class="media-container">
             <img id="slideshowImage" src="/images/image1.jpg" alt="Slideshow Image">
@@ -48,6 +54,17 @@
 </div>
 
 <style>
+.attention-message {
+  border: 2px solid red; /* Red border */
+  background-color: #ffe6e6; /* Light red background */
+  color: #a00; /* Dark red text */
+  padding: 15px; /* Padding inside the box */
+  border-radius: 5px; /* Rounded corners */
+  margin: 20px auto; /* Center the box */
+  max-width: 800px; /* Match the width of the media player */
+  width: 100%; /* Ensure it takes full width up to max-width */
+  box-sizing: border-box;/* Font size */
+}
 #mediaPlayer {
   max-width: 700px;
   margin: 20px auto;
