--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <title>Operaçao Bexiga</title>
     <link rel="stylesheet" href="~/css/style.css" />
+    <link rel="icon" href="~/images/logo.jpeg" type="image/x-icon" />
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
