--- a/WebApplication1/Views/Home/Feminino.cshtml
+++ b/WebApplication1/Views/Home/Feminino.cshtml
@@ -14,8 +14,7 @@
      <div class="attention-message">
         <p style="text-align: center;"><strong>Atenção!</strong></p>
         <p> Se você for passar o cateter não irá precisar de usar luvas.</p>
-        <p> Se outra pessoa for passar o cateter para você: </p>
-        <p> Essa pessoa deve colocar as luvas após a lavagem das mãos, especificado no passo a seguir..<p>
+        <p> Se outra pessoa for passar o cateter para você, essa pessoa deve colocar as luvas após a lavagem das mãos.</p>
     </div>
     <div id="mediaPlayer">
         <div class="media-container">
@@ -203,7 +202,7 @@
         isPlaying = true;
         slideshowInterval = setInterval(() => {
             changeSlide(1);
-        }, 90000);
+        }, 30000);
         slideshowAudio.play();
         playPauseButton.innerHTML = "<i class='bx bx-pause'></i>";
     }
