--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <h1 style="text-align: center;">Bem-vindo ao Operação Bexiga!</h1>
     <p style="text-align: center;">
         Aqui, você vai descobrir tudo sobre o Cateterismo Vesical Intermitente Limpo (CVIL), 
-        uma técnica segura e eficaz para ajudar no esvaziamento da bexiga. Se você tem dificuldade para fazer isso sozinho, o CVIL pode ser a solução ideal.
+        uma técnica segura e eficaz para ajudar no esvaziamento da bexiga.
     </p>
     <p style="text-align: center;">
         Se você tem dificuldade para fazer isso sozinho, o CVIL pode ser a solução ideal.
