--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
         Depois, é só retirar o cateter e pronto!
     </p>
     <p style="text-align: center;">
-        No Operação Bexiga, nosso objetivo é melhorar sua qualidade de vida, prevenindo infecções e preservando a saúde do trato urinário.
+        Na Operação Bexiga, nosso objetivo é melhorar sua qualidade de vida, prevenindo infecções e preservando a saúde do trato urinário.
     </p>
     <p style="text-align: center;">
         Além disso, essa prática pode ajudar a estabilizar algumas alterações anatômicas, como o refluxo vesico-ureteral.
