--- a/WebApplication1/Views/Home/Masculino.cshtml
+++ b/WebApplication1/Views/Home/Masculino.cshtml
@@ -12,7 +12,7 @@
         No player abaixo você irá visualizar como o processo é realizado e também realizar junto.   
     </p>
     <p style="text-align: center; padding-bottom: 10px;">
-        Não se preocoupe, existe uma pausa entre os passos, assim você ira conseguir fazer sem pressa.
+        Não se preocoupe, existe uma pausa entre os passos, assim você irá conseguir fazer sem pressa.
     </p>
     <div class="attention-message">
         <p style="text-align: center;"><strong>Atenção!</strong></p>
