--- a/WebApplication1/Views/Home/Feminino.cshtml
+++ b/WebApplication1/Views/Home/Feminino.cshtml
@@ -48,7 +48,7 @@
     <div class="additional-image" id="qrCodeContainer">
     </div>
     <div class="hyperlink-container">
-        <a href="https://drive.google.com/file/d/15NNPyOoEzi58kdhlmdfH8mZXmu-i08TR/view?usp=drivesdk" target="_blank" class="custom-link">Link PDF</a>
+        <a href="https://drive.google.com/file/d/1L8sQO3KNIV9pwygjnvayhefgnA7xLsHB/view?usp=drivesdk" target="_blank" class="custom-link">Link PDF</a>
     </div>
 </div>
 
@@ -94,7 +94,7 @@
   display: flex;
   justify-content: center;
   padding: 10px;
-  background-color: #004e56;
+  background-color: #d121ab;
 }
 
 .control-button {
@@ -155,7 +155,7 @@
 .custom-link {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #004e56;
+  background-color: #d121ab;
   color: #ffffff;
   text-decoration: none;
   border-radius: 5px;
@@ -302,5 +302,5 @@
         qrCodeContainer.appendChild(qrCodeImage);
     }
 
-    generateQRCode('https://drive.google.com/file/d/15NNPyOoEzi58kdhlmdfH8mZXmu-i08TR/view?usp=drivesdk');
+    generateQRCode('https://drive.google.com/file/d/1L8sQO3KNIV9pwygjnvayhefgnA7xLsHB/view?usp=drivesdk');
 </script>
