--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <button id="playButton" class="control-button">▶</button>
 </div>
 <div class="content">
-    <h1 style="text-align: center;">Bem-vindo a Operação Bexiga!</h1>
+    <h1 style="text-align: center; padding-bottom: 20px;">Bem-vindo a Operação Bexiga!</h1>
     <p style="text-align: center;">
         Aqui, você vai descobrir tudo sobre o Cateterismo Vesical Intermitente Limpo (CVIL), 
         uma técnica segura e eficaz para ajudar no esvaziamento da bexiga.
