--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -6,35 +6,44 @@
     <button id="playButton" class="control-button">▶</button>
 </div>
 <div class="content">
-    <h1 style="text-align: center; padding-bottom: 20px;">Bem-vindo a Operação Bexiga!</h1>
-    <p style="text-align: center;">
-        Aqui, você vai descobrir tudo sobre o Cateterismo Vesical Intermitente Limpo (CVIL), 
-        uma técnica segura e eficaz para ajudar no esvaziamento da bexiga.
-    </p>
-    <p style="text-align: center;">
-        O processo é simples: um cateter é inserido pela uretra até a bexiga, em intervalos regulares, para drenar a urina.
-    </p>
-    <p style="text-align: center;">
-        Depois, é só retirar o cateter e pronto!
-    </p>
-    <p style="text-align: center;">
-        Na Operação Bexiga, nosso objetivo é melhorar sua qualidade de vida, prevenindo infecções e preservando a saúde do trato urinário.
-    </p>
-    <p style="text-align: center;">
-        Além disso, essa prática pode ajudar a estabilizar algumas alterações anatômicas, como o refluxo vesico-ureteral.
-    </p>
-    <p style="text-align: center;">
-        Sabemos que, no começo, você pode sentir alguma insegurança, mas fique tranquilo, isso é completamente normal!
-    </p>
-    <p style="text-align: center;">
-        Incluir o CVIL na sua rotina pode trazer dúvidas e mexer com o lado físico, emocional e social, mas estamos aqui para ajudar você.
-    </p>
-    <p style="text-align: center;">
-        O mais importante é que o CVIL pode ser adaptado às suas necessidades específicas.
-    </p>
-    <p style="text-align: center;">
-        E o melhor: tanto você quanto seus cuidadores podem aprender tudo direitinho, ajudando a reduzir infecções e melhorando sua saúde.
-    </p>
+    <div style="place-self: center;width: 74%;">
+        <div class="header">
+    <h1>Bem-vindo a Operação Bexiga!</h1>
+    </div>
+    <div class="content2">
+        <ul class="list">
+            <p style="text-align: center;">
+               Aqui, você vai descobrir tudo sobre o Cateterismo Vesical Intermitente Limpo (CVIL), 
+               uma técnica segura e eficaz para ajudar no esvaziamento da bexiga.
+            </p>
+            <p style="text-align: center;">
+               O processo é simples: um cateter é inserido pela uretra até a bexiga, em intervalos regulares, para drenar a urina.
+            </p>
+            <p style="text-align: center;">
+               Depois, é só retirar o cateter e pronto!
+            </p>
+            <p style="text-align: center;">
+               Na Operação Bexiga, nosso objetivo é melhorar sua qualidade de vida, prevenindo infecções e preservando a saúde do trato urinário.
+            </p>
+            <p style="text-align: center;">
+               Além disso, essa prática pode ajudar a estabilizar algumas alterações anatômicas, como o refluxo vesico-ureteral.
+            </p>
+            <p style="text-align: center;">
+               Sabemos que, no começo, você pode sentir alguma insegurança, mas fique tranquilo, isso é completamente normal!
+            </p>
+            <p style="text-align: center;">
+               Incluir o CVIL na sua rotina pode trazer dúvidas e mexer com o lado físico, emocional e social, mas estamos aqui para ajudar você.
+            </p>
+            <p style="text-align: center;">
+               O mais importante é que o CVIL pode ser adaptado às suas necessidades específicas.
+            </p>
+            <p style="text-align: center;">
+               E o melhor: tanto você quanto seus cuidadores podem aprender tudo direitinho, ajudando a reduzir infecções e melhorando sua saúde.
+            </p>
+        </ul>
+    </div>
+
+    </div>
     
     <div class="additional-image">
         <img src="/images/imageminicio.png" alt="Additional Image" style="max-width: 100%; height: auto; margin-top: 20px;">
@@ -42,6 +51,39 @@
 </div>
 
 <style>
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .container {
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .header {
+        text-align: center;
+        padding: 10px;
+        background: linear-gradient(to bottom, #004e56, #ffffff);
+    }
+
+    .content2 {
+        padding: 10px;
+        border: 1px solid #000;
+    }
+
+    .list {
+        margin: 0;
+        padding: 0;
+    }
+
+    .list li {
+        margin-bottom: 5px;
+        margin-left: 40px;
+     }
+
+    .bold {
+        font-weight: bold;
+    }
     .button-container {
         text-align: right; /* Align the button to the right */
         margin-bottom: 20px; /* Space below the button */
