--- a/WebApplication1/Views/Home/Referencias.cshtml
+++ b/WebApplication1/Views/Home/Referencias.cshtml
@@ -46,12 +46,12 @@
      .header {
        text-align: center;
        padding: 10px;
-       background-color: #004e56;
+       background: linear-gradient(to bottom, #004e56, #ffffff);
      }
 
     .content2 {
        padding: 10px;
-       border: 1px solid #ccc;
+       border: 1px solid #000;
     }
 
     .list {
